WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25797
Pages with image maps are not properly read with Voiceover
https://bugs.webkit.org/show_bug.cgi?id=25797
Summary
Pages with image maps are not properly read with Voiceover
chris fleizach
Reported
2009-05-14 11:52:50 PDT
image map links need to return AXEnabled = true
Attachments
patch
(4.09 KB, patch)
2009-05-14 11:56 PDT
,
chris fleizach
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2009-05-14 11:56:01 PDT
Created
attachment 30348
[details]
patch
chris fleizach
Comment 2
2009-05-14 12:01:44 PDT
http://trac.webkit.org/changeset/43717
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug