Bug 25797: Pages with image maps are not properly read with Voiceover https://bugs.webkit.org/show_bug.cgi?id=25797

Canonical link: https://commits.webkit.org/35654@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43717 268f45cc-cd09-0410-ab3c-d52691b4dbfc